<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/product_name_label"
            style="@style/details_labels_tv"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/product_name_label"
            android:layout_toRightOf="@id/product_name_label"
            tools:text="product name" />

    </RelativeLayout>

    <View style="@style/view_separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/product_price_label"
            style="@style/details_labels_tv"
            android:text="@string/product_price" />

        <TextView
            android:id="@+id/product_price_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/product_price_label"
            android:layout_toRightOf="@id/product_price_label"
            tools:text="59$" />

    </RelativeLayout>

    <View style="@style/view_separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sell_product_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:text="@string/sell" />

        <TextView
            android:id="@+id/product_quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="500" />

        <Button
            android:id="@+id/order_product_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:text="@string/order" />

    </RelativeLayout>

    <View style="@style/view_separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/supplier_name_label"
            style="@style/details_labels_tv"
            android:text="@string/supplier_name" />

        <TextView
            android:id="@+id/supplier_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/supplier_name_label"
            android:layout_toRightOf="@id/supplier_name_label"
            tools:text="Tomas Paine" />

    </RelativeLayout>

    <View style="@style/view_separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/supplier_phone_label"
            style="@style/details_labels_tv"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone" />

        <TextView
            android:id="@+id/supplier_phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/supplier_phone_label"
            android:layout_toRightOf="@id/supplier_phone_label"
            tools:text="+1-234111111110" />

        <Button
            android:id="@+id/call_supplier_btn"
            android:layout_width="56dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_menu_call" />

    </RelativeLayout>

</LinearLayout>